test/files/neg/virtpatmat_reach_null.check
virtpatmat_reach_null.scala:14: warning: unreachable code
      case _                              =>  // unreachable
                                          ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
